--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script type="text/javascript" src="http://s3-ap-southeast-2.amazonaws.com/dev.supert.ag/p/00036a/supertag.js"></script>
+<script type="text/javascript" src="https://s3-ap-southeast-2.amazonaws.com/dev.supert.ag/p/00036a/supertag.js"></script>
 </body>
 </html>
